--- a/src/text1.css
+++ b/src/text1.css
@@ -9,6 +9,16 @@ table caption{
     margin: 1em 0;
 
 }
+.bjimg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -10;
+    object-fit: cover;
+
+}
 
 th,td{
 
